--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,72 @@
-li {
-    list-style: none;
-  }
-  
-  .pokemon-button {
-    background-color: #a4eda7;
-    border: solid;
-    color: rgb(228, 36, 36);
-    padding: 10px;
+body {
+    background-color: orangered;
+    color: white;
+    margin: 0;
+    font-family: rubik;
+}
+
+.pokedex-content {
+    padding: 40px;
+    margin: 0 auto;
+}
+.btn{
+  color : yellow;
+  margin: 10px;
+}
+
+h1 {
+    text-transform: uppercase;
     text-align: center;
-  }
+    font-size: 54px;
+}
+
+#pokedex {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 20px;
+    padding-inline-start: 0;
+}
+
+.card { border-radius:35%;
+    list-style: none;
+    padding: 40px;
+    background-color: maroon;
+    color: #222;
+  text-align: center;
+}
+
+.card:hover {
+    animation: bounce 0.2s linear;
+}
+
+.card-title {
+    text-transform: capitalize;
+    margin-bottom: 0px;
+    font-size: 32px;
+    font-weight: normal;
+}
+.card-subtitle {
+    margin-top: 5px;
+    color: #666;
+    font-weight: lighter;
+}
+
+.card-image {
+    height: 180px;
+}
+
+@keyframes bounce {
+    20% {
+        transform: translateY(-6px);
+    }
+    40% {
+        transform: translateY(0px);
+    }
+
+    80% {
+        transform: translateY(-2px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
